--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
             target: x86_64-unknown-linux-gnu
             release_asset: hyrcon-client-x86_64-unknown-linux-gnu
             binary_suffix: ""
-          - runner: macos-13
+          - runner: macOS-15
             target: x86_64-apple-darwin
             release_asset: hyrcon-client-x86_64-apple-darwin
             binary_suffix: ""
